# Quasar

./: CMakeLists.txt  Quasar.cpp  Quasar.h  README.md
API/Headers/: CoreMinimal.h
API/Sources/: CoreMinimal.cpp
Example/: CMakeLists.txt
GraphicCore/: CMakeLists.txt
GraphicCore/SPIRV-Tools/: CMakeLists.txt
GraphicCore/SPIRV-Tools/Headers/: ShaderManager.h
GraphicCore/SPIRV-Tools/Sources/: ShaderManager.cpp
GraphicCore/VulkanCore/: CMakeLists.txt
GraphicCore/VulkanCore/Headers/: CommandBuffer.h  Common.h  CommonHeaders.h  Core.h  FrameBuffer.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  Pipeline.h  SwapChain.h  Synchronization.h  Validation.h  Window.h  WindowSurface.h
GraphicCore/VulkanCore/Sources/: CommandBuffer.cpp  Core.cpp  FrameBuffer.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Pipeline.cpp  SwapChain.cpp  Validation.cpp  Window.cpp  WindowSurface.cpp
